unpackaged/main/default/objects/Lead/fields/Accounting__c.field-meta.xml
<CustomField>
    <fullName>Accounting__c</fullName>
    <label>Accounting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non communiqué</fullName>
                <default>true</default>
                <label>Non communiqué</label>
            </value>
            <value>
                <fullName>Cegid</fullName>
            </value>
            <value>
                <fullName>Ciel</fullName>
            </value>
            <value>
                <fullName>EBP</fullName>
            </value>
            <value>
                <fullName>Par expert-comptable</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>