unpackaged/main/default/objects/Lead/fields/Availability1__c.field-meta.xml
<CustomField>
    <fullName>Availability1__c</fullName>
    <description>MANACT field</description>
    <label>Availability</label>
    <type>TextArea</type>
</CustomField>