unpackaged/main/default/objects/Lead/fields/Availability2__c.field-meta.xml
<CustomField>
    <fullName>Availability2__c</fullName>
    <label>Availability</label>
    <type>TextArea</type>
</CustomField>