unpackaged/main/default/objects/Lead/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <description>MANACT field</description>
    <label>Availability</label>
    <type>TextArea</type>
</CustomField>