unpackaged/main/default/objects/Lead/fields/Buffer_Name__c.field-meta.xml
<CustomField>
    <fullName>Buffer_Name__c</fullName>
    <label>Buffer Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>HCM Canada - USA</fullName>
            </value>
            <value>
                <fullName>HCM Iberia</fullName>
            </value>
            <value>
                <fullName>HCM Iberia - Latam</fullName>
                <isActive>false</isActive>
                <label>HCM Iberia - Latam</label>
            </value>
            <value>
                <fullName>HCM Latam</fullName>
            </value>
            <value>
                <fullName>HCM Time Management Rest of the world</fullName>
            </value>
            <value>
                <fullName>HCM Visual Time</fullName>
            </value>
            <value>
                <fullName>Partner Marketing leads - ERP</fullName>
            </value>
            <value>
                <fullName>Partner Marketing leads – HCM</fullName>
            </value>
            <value>
                <fullName>Partner Marketing leads - Retail</fullName>
            </value>
            <value>
                <fullName>Retail International</fullName>
            </value>
            <value>
                <fullName>SDR CPA France</fullName>
            </value>
            <value>
                <fullName>SDR Finance France</fullName>
            </value>
            <value>
                <fullName>SDR HCM France</fullName>
            </value>
            <value>
                <fullName>SDR HCM International</fullName>
            </value>
            <value>
                <fullName>SDR Leads</fullName>
                <isActive>false</isActive>
                <label>SDR Leads</label>
            </value>
            <value>
                <fullName>SDR Notilus</fullName>
            </value>
            <value>
                <fullName>SDR Retail France</fullName>
            </value>
            <value>
                <fullName>SDR StorIQ</fullName>
            </value>
            <value>
                <fullName>Talentsoft Benelux</fullName>
            </value>
            <value>
                <fullName>Talentsoft DACH</fullName>
            </value>
            <value>
                <fullName>Talentsoft Nordics</fullName>
            </value>
            <value>
                <fullName>TAX Spain</fullName>
            </value>
            <value>
                <fullName>Telemarketing France</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>