unpackaged/main/default/objects/Lead/fields/Business_Software__c.field-meta.xml
<CustomField>
    <fullName>Business_Software__c</fullName>
    <label>Business Software</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non Communiqué</fullName>
            </value>
            <value>
                <fullName>Cegid</fullName>
            </value>
            <value>
                <fullName>Ciel</fullName>
            </value>
            <value>
                <fullName>EBP</fullName>
            </value>
            <value>
                <fullName>Sage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>