unpackaged/main/default/objects/Lead/fields/Call_attempts__c.field-meta.xml
<CustomField>
    <fullName>Call_attempts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Record how many times the telemarketing team tryed to reach the lead.  Field required as AWE Lead qualifing flow</description>
    <label>Call attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>