unpackaged/main/default/objects/Lead/fields/Call_back_date__c.field-meta.xml
<CustomField>
    <fullName>Call_back_date__c</fullName>
    <label>Call back date</label>
    <type>Date</type>
</CustomField>