unpackaged/main/default/objects/Lead/fields/Call_result__c.field-meta.xml
<CustomField>
    <fullName>Call_result__c</fullName>
    <description>Field to start the Qualifying Workflow by TLMKT team</description>
    <inlineHelpText>Select a value as consequence of  your attenpt to contact the Lead</inlineHelpText>
    <label>Call result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person contacted</fullName>
            </value>
            <value>
                <fullName>No Answer</fullName>
                <default>true</default>
                <label>No Answer</label>
            </value>
            <value>
                <fullName>Invalid Lead - No Business</fullName>
                <isActive>false</isActive>
                <label>Invalid Lead - No Business</label>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
                <isActive>false</isActive>
                <label>Invalid Number</label>
            </value>
            <value>
                <fullName>Not Reacheable</fullName>
                <isActive>false</isActive>
                <label>Not Reacheable</label>
            </value>
            <value>
                <fullName>Not yet treated</fullName>
                <isActive>false</isActive>
                <label>Not yet treated</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>