unpackaged/main/default/objects/Lead/fields/Call_Transferred__c.field-meta.xml
<CustomField>
    <fullName>Call_Transferred__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The telemarketing qualication call was transferred to sales</inlineHelpText>
    <label>Call Transferred</label>
    <type>Checkbox</type>
</CustomField>