unpackaged/main/default/objects/Lead/fields/Company_s_Business__c.field-meta.xml
<CustomField>
    <fullName>Company_s_Business__c</fullName>
    <label>TO BE DELETED Company's Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration publique</fullName>
            </value>
            <value>
                <fullName>Agences de voyage</fullName>
            </value>
            <value>
                <fullName>Agriculture peche et foret</fullName>
            </value>
            <value>
                <fullName>Assurances et mutuelles</fullName>
            </value>
            <value>
                <fullName>Banques et services financiers</fullName>
            </value>
            <value>
                <fullName>Bibliothèques et tourisme</fullName>
            </value>
            <value>
                <fullName>Btp</fullName>
            </value>
            <value>
                <fullName>Cabinets de conseils</fullName>
            </value>
            <value>
                <fullName>Caisses de retraite</fullName>
            </value>
            <value>
                <fullName>Casinos et jeux de hasard</fullName>
            </value>
            <value>
                <fullName>CCI</fullName>
            </value>
            <value>
                <fullName>Coiffeur</fullName>
            </value>
            <value>
                <fullName>Commerce de détail alimentaire</fullName>
            </value>
            <value>
                <fullName>Commerce de détail divers</fullName>
            </value>
            <value>
                <fullName>Commerce de détail spécialisé</fullName>
            </value>
            <value>
                <fullName>Divers associations</fullName>
            </value>
            <value>
                <fullName>E Commerce et VPC</fullName>
            </value>
            <value>
                <fullName>Edition de logiciels</fullName>
            </value>
            <value>
                <fullName>Emploi</fullName>
            </value>
            <value>
                <fullName>Enquete et sécurité</fullName>
            </value>
            <value>
                <fullName>Enseignement</fullName>
            </value>
            <value>
                <fullName>Environnement</fullName>
            </value>
            <value>
                <fullName>Expertise comptable</fullName>
            </value>
            <value>
                <fullName>Grande ou moyenne surface</fullName>
            </value>
            <value>
                <fullName>Holding</fullName>
            </value>
            <value>
                <fullName>Hotellerie restauration</fullName>
            </value>
            <value>
                <fullName>Immobilier</fullName>
            </value>
            <value>
                <fullName>Ind alimentaire et boissons</fullName>
            </value>
            <value>
                <fullName>Ind chimie cosmétique pharma</fullName>
            </value>
            <value>
                <fullName>Ind équipement électrique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>