unpackaged/main/default/objects/Lead/fields/Competitor_1__c.field-meta.xml
<CustomField>
    <fullName>Competitor_1__c</fullName>
    <label>TO BE DELETED Competitor 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitor</valueSetName>
    </valueSet>
</CustomField>