unpackaged/main/default/objects/Lead/fields/Competitor_2__c.field-meta.xml
<CustomField>
    <fullName>Competitor_2__c</fullName>
    <label>TO BE DELETED Competitor 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competitor</valueSetName>
    </valueSet>
</CustomField>