unpackaged/main/default/objects/Lead/fields/CurrentSolution_Competitor1__c.field-meta.xml
<CustomField>
    <fullName>CurrentSolution_Competitor1__c</fullName>
    <label>Competitor 1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CurrentSolution_CoreBusiness1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Competitor</valueSetName>
    </valueSet>
</CustomField>