unpackaged/main/default/objects/Lead/fields/CurrentSolution_Competitor2__c.field-meta.xml
<CustomField>
    <fullName>CurrentSolution_Competitor2__c</fullName>
    <label>Competitor 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CurrentSolution_CoreBusiness2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Competitor</valueSetName>
    </valueSet>
</CustomField>