unpackaged/main/default/objects/Lead/fields/CurrentSolution_Competitor3__c.field-meta.xml
<CustomField>
    <fullName>CurrentSolution_Competitor3__c</fullName>
    <label>Competitor 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CurrentSolution_CoreBusiness3__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Competitor</valueSetName>
    </valueSet>
</CustomField>