unpackaged/main/default/objects/Lead/fields/CurrentSolution_CoreBusiness1__c.field-meta.xml
<CustomField>
    <fullName>CurrentSolution_CoreBusiness1__c</fullName>
    <label>Core Business 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Core_Business</valueSetName>
    </valueSet>
</CustomField>