unpackaged/main/default/objects/Lead/fields/Expense_reports_CurrentIS__c.field-meta.xml
<CustomField>
    <fullName>Expense_reports_CurrentIS__c</fullName>
    <label>Expense reports</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>Value 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>