unpackaged/main/default/objects/Lead/fields/External_Comment__c.field-meta.xml
<CustomField>
    <fullName>External_Comment__c</fullName>
    <description>Comments from the Customer</description>
    <label>External Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>