unpackaged/main/default/objects/Lead/fields/Function__c.field-meta.xml
<CustomField>
    <fullName>Function__c</fullName>
    <description>Used to calculate the Buynig persona used to target Campaigns</description>
    <label>Function</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Function</valueSetName>
    </valueSet>
</CustomField>