unpackaged/main/default/objects/Lead/fields/Functional_need__c.field-meta.xml
<CustomField>
    <fullName>Functional_need__c</fullName>
    <label>TO BE DELETED Functional need</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Functional_need</valueSetName>
    </valueSet>
</CustomField>