unpackaged/main/default/objects/Lead/fields/ID_TS__c.field-meta.xml
<CustomField>
    <fullName>ID_TS__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Ce champ permet une synchronisation des données avec l'environnement SF de talensoft,</description>
    <externalId>true</externalId>
    <label>ID TS</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>