unpackaged/main/default/objects/Lead/fields/Industry_WebForm__c.field-meta.xml
<CustomField>
    <fullName>Industry_WebForm__c</fullName>
    <label>Industry WebForm</label>
    <type>TextArea</type>
</CustomField>