unpackaged/main/default/objects/Lead/fields/Intercommunity_VAT_number__c.field-meta.xml
<CustomField>
    <fullName>Intercommunity_VAT_number__c</fullName>
    <inlineHelpText>A tax Number or taxpayer identification number, also known as a TIN for short, is a number issued to organizations to track tax obligations and payments they make. Do not enter any spaces in the field.</inlineHelpText>
    <label>TAX Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>