unpackaged/main/default/objects/Lead/fields/Internal_Comment__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comment__c</fullName>
    <description>Comments from Telemarketing or another CEGID internal user</description>
    <inlineHelpText>Internal Comment used to describe the lead's need</inlineHelpText>
    <label>Internal Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>