unpackaged/main/default/objects/Lead/fields/Is_there_a_specific_deadline__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_specific_deadline__c</fullName>
    <label>Is there a specific deadline ?</label>
    <type>TextArea</type>
</CustomField>