unpackaged/main/default/objects/Lead/fields/Language_in_community__c.field-meta.xml
<CustomField>
    <fullName>Language_in_community__c</fullName>
    <label>Language in community</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>