unpackaged/main/default/objects/Lead/fields/Last_AQL_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_AQL_Date__c</fullName>
    <label>Last AQL Date</label>
    <type>DateTime</type>
</CustomField>