unpackaged/main/default/objects/Lead/fields/Last_Call__c.field-meta.xml
<CustomField>
    <fullName>Last_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Define if all call attempts to reach the lead were done</description>
    <inlineHelpText>Check this box if all attempts to reach the lead were done (Number of call attemps = 3)</inlineHelpText>
    <label>Last Call?</label>
    <type>Checkbox</type>
</CustomField>