unpackaged/main/default/objects/Lead/fields/Last_Touch_Source_Telemarketing__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Source_Telemarketing__c</fullName>
    <label>Last Touch Source Telemarketing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>List_Touch_Source_Telemarketing</valueSetName>
    </valueSet>
</CustomField>