unpackaged/main/default/objects/Lead/fields/Lead_non_AQL__c.field-meta.xml
<CustomField>
    <fullName>Lead_non_AQL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if a contact has already been created from a lead conversion. If a new lead is created and the same email adress is found on an existing contact, the checkbox is turned to true.</description>
    <label>Lead non AQL</label>
    <type>Checkbox</type>
</CustomField>