unpackaged/main/default/objects/Lead/fields/Lead_Origin__c.field-meta.xml
<CustomField>
    <fullName>Lead_Origin__c</fullName>
    <defaultValue>"Marketing"</defaultValue>
    <description>Field Read Only to regular Users.
Used only to map to Contact concernig a GDPR info</description>
    <label>Lead Origin</label>
    <length>40</length>
    <type>Text</type>
</CustomField>