unpackaged/main/default/objects/Lead/fields/Lead_TS__c.field-meta.xml
<CustomField>
    <fullName>Lead_TS__c</fullName>
    <formula>IF(
AND(NOT(ISPICKVAL(Language_in_community__c, "")),
NOT(ISBLANK(Requester_name__c))
),
true,
false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead TS</label>
    <type>Checkbox</type>
</CustomField>