unpackaged/main/default/objects/Lead/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <defaultValue>IF( $RecordType.Name  = 'Lead Telemarketing',  $Label.Default_Marketing_Campaign_For_telemark, "")</defaultValue>
    <label>Marketing Campaign</label>
    <length>40</length>
    <type>Text</type>
</CustomField>