unpackaged/main/default/objects/Lead/fields/Marketing_Status__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Status__c</fullName>
    <defaultValue>IF($Permission.Lead_field_modify_for_telemark, $Label.Default_Marketing_Status_For_Telemark,
				IF($User.LastName = 'Impartner',   $Label.Default_Marketing_Status_For_PRM, null)
		)</defaultValue>
    <label>Marketing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Status</valueSetName>
    </valueSet>
</CustomField>