unpackaged/main/default/objects/Lead/fields/Marketo_Info__c.field-meta.xml
<CustomField>
    <fullName>Marketo_Info__c</fullName>
    <label>Marketo Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>