unpackaged/main/default/objects/Lead/fields/mkto71_Original_Search_Phrase__c.field-meta.xml
<CustomField>
    <fullName>mkto71_Original_Search_Phrase__c</fullName>
    <label>Original Search Phrase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>