unpackaged/main/default/objects/Lead/fields/Mkto_email_invalid__c.field-meta.xml
<CustomField>
    <fullName>Mkto_email_invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Invalid (CRM)</label>
    <type>Checkbox</type>
</CustomField>