unpackaged/main/default/objects/Lead/fields/Mkto_email_invalid_reason__c.field-meta.xml
<CustomField>
    <fullName>Mkto_email_invalid_reason__c</fullName>
    <label>Email Invalid Cause (CRM)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>