unpackaged/main/default/objects/Lead/fields/Mkto_email_simple_opt_in_date__c.field-meta.xml
<CustomField>
    <fullName>Mkto_email_simple_opt_in_date__c</fullName>
    <label>Email Simple Opt-in Date (CRM)</label>
    <type>Date</type>
</CustomField>