unpackaged/main/default/objects/Lead/fields/Mkto_owner_full_name__c.field-meta.xml
<CustomField>
    <fullName>Mkto_owner_full_name__c</fullName>
    <formula>blankvalue(Owner:Queue.QueueName,
Owner:User.FirstName &amp;" "&amp;
Owner:User.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner full name</label>
    <type>Text</type>
</CustomField>