unpackaged/main/default/objects/Lead/fields/Mkto_owner_is_active__c.field-meta.xml
<CustomField>
    <fullName>Mkto_owner_is_active__c</fullName>
    <formula>Owner:User.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is active</label>
    <type>Checkbox</type>
</CustomField>