unpackaged/main/default/objects/Lead/fields/Mkto_owner_is_user__c.field-meta.xml
<CustomField>
    <fullName>Mkto_owner_is_user__c</fullName>
    <formula>not(isblank( Owner:User.LastName ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner is user</label>
    <type>Checkbox</type>
</CustomField>