unpackaged/main/default/objects/Lead/fields/Mkto_Owner_Profile__c.field-meta.xml
<CustomField>
    <fullName>Mkto_Owner_Profile__c</fullName>
    <formula>Owner:User.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Profile</label>
    <type>Text</type>
</CustomField>