unpackaged/main/default/objects/Lead/fields/Mkto_Queue_Email__c.field-meta.xml
<CustomField>
    <fullName>Mkto_Queue_Email__c</fullName>
    <formula>Owner:Queue.QueueEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue Email</label>
    <type>Text</type>
</CustomField>