unpackaged/main/default/objects/Lead/fields/Mkto_Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Mkto_Queue_Name__c</fullName>
    <formula>Owner:Queue.QueueName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Queue Name</label>
    <type>Text</type>
</CustomField>