unpackaged/main/default/objects/Lead/fields/Mkto_total_score__c.field-meta.xml
<CustomField>
    <fullName>Mkto_total_score__c</fullName>
    <formula>blankvalue(Mkto_behavior_score__c
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>