unpackaged/main/default/objects/Lead/fields/Mkto_Unsync_Requested__c.field-meta.xml
<CustomField>
    <fullName>Mkto_Unsync_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsync from Marketo requested</label>
    <type>Checkbox</type>
</CustomField>