unpackaged/main/default/objects/Lead/fields/National_ID__c.field-meta.xml
<CustomField>
    <fullName>National_ID__c</fullName>
    <description>National ID of the account. For France it's the SIRET</description>
    <label>National ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>